--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dropdown": "^1.11.0",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.0",
     "react-transition-group": "^4.4.5",
     "sass": "^1.58.0",
     "sass-loader": "^13.2.0",
