--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "css-loader": "^6.7.3",
+    "datepicker": "^0.0.0",
+    "dayjs": "^1.11.7",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
     "react-router-dom": "^6.8.0",
