--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@headlessui/react": "^1.7.9",
     "@heroicons/react": "^2.0.14",
     "@mui/icons-material": "^5.11.0",
+    "@mui/joy": "^5.0.0-alpha.66",
     "@mui/material": "^5.11.7",
+    "@mui/x-date-pickers": "^5.0.18",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
