--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.37.0",
+    "axios": "^1.3.2",
     "css-loader": "^6.7.3",
     "datepicker": "^0.0.0",
     "dayjs": "^1.11.7",
@@ -33,7 +34,6 @@
     "react-select": "^5.7.0",
     "react-transition-group": "^4.4.5",
     "sass": "^1.58.0",
-    "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
     "web-vitals": "^2.1.4"
   },
@@ -62,6 +62,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
+    "sass-loader": "^13.2.0",
     "tailwindcss": "^3.2.4"
   }
 }
