--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
+    "react-feather": "^2.0.10",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
