--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
+    "react-token-auth": "^2.3.8",
     "react-transition-group": "^4.4.5",
     "sass": "^1.58.0",
     "style-loader": "^3.3.1",
