--- a/package.json
+++ b/package.json
@@ -19,17 +19,20 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.37.0",
+    "autoprefixer": "^10.4.13",
     "axios": "^1.3.2",
     "css-loader": "^6.7.3",
     "datepicker": "^0.0.0",
     "dayjs": "^1.11.7",
     "moment": "^2.29.4",
+    "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
     "react-feather": "^2.0.10",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
