--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-calendar": "^4.0.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
     "react-feather": "^2.0.10",
