--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "reactstrap": "^9.1.5",
     "sass": "^1.58.0",
     "style-loader": "^3.3.1",
+    "sweetalert2": "^11.7.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
